Removed color styles from footer text Added waters sample doc Edited default sample doc to show dynamic page number in the page title.Makes bottom nav buttons always visible but disabled when appropriate Fixed broken tests

--- a/src/components/activity-page/bottom-buttons.scss
+++ b/src/components/activity-page/bottom-buttons.scss
@@ -9,4 +9,10 @@
     justify-content: center;
   }
 
+  button:disabled {
+    background-color: $cc-teal-light2;
+    &:hover {
+      background-color: $cc-teal-light2;
+    }
+  }
 }
